--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^4.6.4",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/slider": "4.5.2",
+    "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/native": "^6.0.2",
+    "@supabase/supabase-js": "^2.45.1",
     "@tanstack/react-query": "^5.51.23",
     "axios": "^1.7.4",
     "buffer": "^6.0.3",
     "color": "^4.2.3",
     "expo": "~51.0.28",
+    "expo-asset": "~10.0.10",
     "expo-av": "~14.0.6",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
@@ -50,8 +54,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "expo-asset": "~10.0.10"
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
