--- a/app.json
+++ b/app.json
@@ -36,6 +36,12 @@
         {
           "initialOrientation": "DEFAULT"
         }
+      ],
+      [
+        "@react-native-google-signin/google-signin",
+        {
+          "iosUrlScheme": "com.googleusercontent.apps._some_id_here_"
+        }
       ]
     ],
     "experiments": {
