--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/native": "^6.0.2",
     "@supabase/supabase-js": "^2.45.1",
+    "@tanstack/query-core": "^5.51.21",
     "@tanstack/react-query": "^5.51.23",
     "axios": "^1.7.4",
     "buffer": "^6.0.3",
@@ -45,6 +46,7 @@
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "jotai": "^2.9.3",
+    "jotai-tanstack-query": "^0.8.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.13.0",
