--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
     "expo-notifications": "~0.28.15",
-    "expo-device": "~6.0.2"
+    "expo-device": "~6.0.2",
+    "expo-sharing": "~12.0.1",
+    "expo-clipboard": "~6.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
