--- a/package.json
+++ b/package.json
@@ -28,19 +28,24 @@
     "axios": "^1.7.4",
     "buffer": "^6.0.3",
     "color": "^4.2.3",
+    "crypto-js": "^4.2.0",
     "expo": "~51.0.28",
     "expo-asset": "~10.0.10",
     "expo-av": "~14.0.6",
+    "expo-clipboard": "~6.0.3",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
     "expo-dev-client": "~4.0.23",
+    "expo-device": "~6.0.2",
     "expo-font": "~12.0.9",
     "expo-image": "~1.12.13",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
+    "expo-notifications": "~0.28.15",
     "expo-router": "~3.5.23",
     "expo-screen-orientation": "~7.0.5",
     "expo-secure-store": "~13.0.2",
+    "expo-sharing": "~12.0.1",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -57,11 +62,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.10",
-    "expo-notifications": "~0.28.15",
-    "expo-device": "~6.0.2",
-    "expo-sharing": "~12.0.1",
-    "expo-clipboard": "~6.0.3"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
